--- a/src/main/resources/templates/loginSuccessful.html
+++ b/src/main/resources/templates/loginSuccessful.html
@@ -6,90 +6,172 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
   <style>
-    h1 {
-      color:white;
-      text-align: center;
-      font-size: 50px;
-      padding-top: 70px;
-      font-weight: normal;
-      margin-bottom: 0;
-    }
-
-    h2 {
-      color:white;
-      text-align: center;
-      font-size: 30px;
-      padding-bottom: 70px;
-      font-weight: normal;
-      margin-bottom: 0;
-    }
-
-    .scroll-tray {
-      white-space: nowrap;
-    }
-    .scroll-tray div {
-      display: inline-block;
-    }
-
-    .scroll-tray img {
-      border-radius: 0.3rem;
-      margin: 7px 5px;
+    *{
+      margin: 0;
       padding: 0;
-      width: 340px;
+      /* font-family: poppins;
+
+       */
+      box-sizing: border-box;
     }
 
-    .scroll-holder {
-      overflow-x: hidden;
+    body{
+      /* background: black;
+
+       */
+      color: #fff;
     }
 
-    .scroll-holder .scroll-tray:first-child {
-      animation: scroll-tray-hero 180s linear infinite;
+    .wrapper{
+      padding: 10px 10%;
     }
 
-    .scroll-holder .scroll-tray:last-child {
-      animation: scroll-tray-hero 120s linear infinite;
+
+    #card-area{
+      padding: 50px 0;
     }
 
-    @keyframes scroll-tray-hero {
-      0% {
-        transform: translateX(0);
-      }
-
-      99.99% {
-        transform: translateX(-7098px);
-      }
-
-      100% {
-        transform: translateX(0);
-      }
+    .box-area{
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+      grid-gap: 40px;
+      margin-top: 50px;
     }
 
+    .box{
+      border-radius: 10px;
+      position: relative;
+      overflow: hidden;
+      box-shadow: 5px 5px 15px rgba(0,0,0,0.5);
+    }
+
+    .box img{
+      width: 100%;
+      object-fit: fill;
+      border-radius: 10px;
+      display: block;
+      transistion: transform 0.5s
+    }
+
+    .overlay{
+      height: 0;
+      width: 100%;
+      background: linear-gradient(transparent, #1c1c1c 58% );
+      border-radius: 10px;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      padding: 0 40px;
+      text-align: center;
+      font-size: 14px;
+      transition: height 0.5s;
+    }
+
+    .overlay h3{
+      font-weight: 500;
+      margin-bottom: 5px;
+      margin-top: 2%;
+      font-family: bebas neue;
+      font-size: 30px;
+      letter-spacing: 2px;
+    }
+
+
+    .overlay a{
+      margin-top: 10px;
+      color: #262626;
+      text-decoration: none;
+      font-size: 14px;
+      background: #fff;
+      border-radius: 50px;
+      text-align: center;
+      padding: 5px 15px;
+    }
+
+    .boxLhover img{
+      transform: scale(1.2);
+    }
+
+    .box:hover .overlay{
+      height: 100%;
+    }
+
+    h1{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 50px;
+      color: darkred;
+      font-weight: bold;
+      -webkit-text-stroke: 3px black;
+    }
+
+    p{
+      font-size: 12px;
+      font-family: poppins;
+    }
+
+
+    h1{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 50px;
+      color: darkred;
+      font-weight: bold;
+      -webkit-text-stroke: 3px black;
+    }
+
+    .login{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: bold;
+      color: black;
+      font-size: 20px;
+      margin-top: 50px;
+    }
   </style>
   <title>Success!</title>
 </head>
 <body>
 <div th:replace="~{fragments/menu :: menu-bar}"></div>
+
+<div>
+  <h1>Most Popular Movies</h1>
+</div>
+
+
 <div th:if="${#ctx.session.loggedInUser != null}">
-  <p th:text="|Welcome ${#ctx.session.loggedInUser.getUsername()} you are logged in|">
+  <p class="login" th:text="|Welcome ${#ctx.session.loggedInUser.getUsername()} you are logged in|">
   </p>
 </div>
 <br>
 
 
 
-<section>
-  <div class="scroll-holder">
-    <div class="scroll-tray">
+<div id="card-area">
+  <div class="wrapper">
+    <div class="box-area">
       <div th:each="movie : ${movies}">
-        <div>
-          <img th:src="@{'https://image.tmdb.org/t/p/w500/'+${movie.getBackdrop_path()}}" class="card-img-top" alt="...">
+        <div class="box">
+          <img th:src="@{'https://image.tmdb.org/t/p/w500/'+${movie.getBackdrop_path()}}"  alt="">
+          <div class="overlay">
+            <h3 th:text="${movie.getTitle()}"> Mountain</h3>
+            <p th:text="${movie.getOverview()}" ></p>
+            <a th:href="@{/movieTrailer(id=${movie.getId()})}">View Videos</a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="scroll-tray">
+
     </div>
   </div>
-</section>
+</div>
 <!--<a href ="logOut">Logout</a>-->
 </body>
 </html>
