--- a/src/main/resources/templates/user_index.html
+++ b/src/main/resources/templates/user_index.html
@@ -69,8 +69,9 @@
       </form>
 
       <p>Dont remember your password?
-        <a href="#" style="text-decoration: none;">
+        <a href="/forgot_password" style="text-decoration: none;">
           Forgot password
+
         </a>
       </p>
     </div>
