--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -3,8 +3,22 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Menu</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
+
+  <style>
+    .cartNumber{
+      font-size: 14px;
+      font-weight: 900;
+      position: absolute;
+      border: solid blue;
+      border-radius: 60%;
+      height: 14px;
+      width: 8px;
+      background:blue;
+    }
+  </style>
 </head>
 <body>
 <!-- The next line allows us to include the menu bar in other thymeleaf template files -->
@@ -28,8 +42,15 @@
             <a class="nav-link active" aria-current="page" th:href="@{/subscription_index}" >Subscriptions</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" th:href="@{/store_index}" >Store</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" th:href="@{/logOut}" >Logout</a>
           </li>
+
+          <a class="nav-link active" th:href="@{/cart_index}" > <i class="fa" style="font-size:24px; margin-left: 900px">&#xf07a;</i>
+            <span class="cartNumber" th:text="${totalCartItems}">5 </span></a>
+
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
