--- a/src/main/resources/templates/cart_index.html
+++ b/src/main/resources/templates/cart_index.html
@@ -70,7 +70,7 @@
     </div>
     <div class="btn-group btns-cart">
       <a href ="/store_index"><button type="button" class="btn btn-primary"><i class="fa fa-arrow-circle-left"></i> Continue Shopping</button></a>
-      <button type="button" class="btn btn-primary">Checkout <i class="fa fa-arrow-circle-right"></i></button>
+      <a href ="/checkout_index"><button type="button" class="btn btn-primary">Checkout <i class="fa fa-arrow-circle-right"></i></button></a>
     </div>
 
   </div>
