--- a/src/main/resources/templates/videos.html
+++ b/src/main/resources/templates/videos.html
@@ -80,6 +80,7 @@
       font-family: poppins;
     }
 
+
   </style>
 
   <style>
@@ -97,6 +98,14 @@
       top: 0;
       z-index: -1;
     }
+
+    .center {
+      margin: auto;
+      width: 60%;
+      padding: 10px;
+    }
+
+
   </style>
 </head>
 <body>
@@ -112,21 +121,14 @@
   </div>
 
 
-
-  <div class="list-group">
-    <div th:each="trailer : ${trailers}">
-
-      <a th:href=" | https://www.youtube.com/watch?v=${trailer.getKey()} |" class="list-group-item list-group-item-action flex-column align-items-start">
-        <div class="d-flex w-100 justify-content-between">
-          <h5 class="mb-1"  th:text="${trailer.getName()}"></h5>
-          <small th:text=" | Click anywhere to view video|"></small>
-        </div>
-        <p class="mb-1" ></p>
-        <small th:text="  |Type: ${trailer.getType()} |"></small>
-      </a>
-<br>
-    </div>
+  <div class="center">
+  <div th:each="trailer : ${trailers}">
+    <iframe width="100%" height="345" th:src=" | https://www.youtube.com/embed/${trailer.getKey()} |" allowFullScreen></iframe>
+    <br>
+    <br>
   </div>
+  </div>
+
 
 
 
